# CCCoreLibBuilder

./: .gitignore  CC_CORE_LIBConfig.cmake.in  CMakeLists.txt  CPackConfig.cmake  LICENSE.md  README.md
